package com.gerald.api.gatewawy;

/**
 * Created by Gerald_Yang on 2017/9/12.
 */
public class DesktopProduct {
  private String imagepath;
  private String price;

  public DesktopProduct() {
  }

  public String getImagepath() {
    return imagepath;
  }

  public void setImagepath(String imagepath) {
    this.imagepath = imagepath;
  }

  public String getPrice() {
    return price;
  }

  public void setPrice(String price) {
    this.price = price;
  }
}
